chore: add qa for setup idea